logs/dag_id=etl_22024-08-21/run_id=scheduled__2024-08-14T00:00:00+00:00/task_id=final_etl_processing/attempt=1.log
[2024-08-21T06:27:45.398+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-08-21T06:27:45.473+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: etl_22024-08-21.final_etl_processing scheduled__2024-08-14T00:00:00+00:00 [queued]>
[2024-08-21T06:27:45.504+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: etl_22024-08-21.final_etl_processing scheduled__2024-08-14T00:00:00+00:00 [queued]>
[2024-08-21T06:27:45.506+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2024-08-21T06:27:45.696+0000] {taskinstance.py:2330} INFO - Executing <Task(BashOperator): final_etl_processing> on 2024-08-14 00:00:00+00:00
[2024-08-21T06:27:45.789+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=4543) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-08-21T06:27:45.776+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'etl_22024-08-21', 'final_etl_processing', 'scheduled__2024-08-14T00:00:00+00:00', '--job-id', '766', '--raw', '--subdir', 'DAGS_FOLDER/final_etl.py', '--cfg-path', '/tmp/tmpzk6bcke0']
[2024-08-21T06:27:45.807+0000] {standard_task_runner.py:91} INFO - Job 766: Subtask final_etl_processing
[2024-08-21T06:27:45.806+0000] {standard_task_runner.py:63} INFO - Started process 4556 to run task
[2024-08-21T06:27:46.095+0000] {task_command.py:426} INFO - Running <TaskInstance: etl_22024-08-21.final_etl_processing scheduled__2024-08-14T00:00:00+00:00 [running]> on host 7e1333882d71
[2024-08-21T06:27:46.453+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='etl_22024-08-21' AIRFLOW_CTX_TASK_ID='final_etl_processing' AIRFLOW_CTX_EXECUTION_DATE='2024-08-14T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-08-14T00:00:00+00:00'
[2024-08-21T06:27:46.460+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-08-21T06:27:46.513+0000] {subprocess.py:63} INFO - Tmp dir root location: /tmp
[2024-08-21T06:27:46.515+0000] {subprocess.py:75} INFO - Running command: ['/usr/bin/bash', '-c', "python3 /opt/***/data/etl_m12.py --connection postgresql+psycopg2://***:***@postgres/postgres --csv ''"]
[2024-08-21T06:27:46.542+0000] {subprocess.py:86} INFO - Output:
[2024-08-21T06:27:46.784+0000] {subprocess.py:93} INFO -   File "/opt/***/data/etl_m12.py", line 155
[2024-08-21T06:27:46.793+0000] {subprocess.py:93} INFO -     # main(args.csv, args.connection)
[2024-08-21T06:27:46.796+0000] {subprocess.py:93} INFO - IndentationError: expected an indented block after 'if' statement on line 147
[2024-08-21T06:27:46.802+0000] {subprocess.py:97} INFO - Command exited with return code 1
[2024-08-21T06:27:46.805+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-08-21T06:27:46.909+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/bash.py", line 243, in execute
    raise AirflowException(
airflow.exceptions.AirflowException: Bash command failed. The command returned a non-zero exit code 1.
[2024-08-21T06:27:46.936+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=etl_22024-08-21, task_id=final_etl_processing, run_id=scheduled__2024-08-14T00:00:00+00:00, execution_date=20240814T000000, start_date=20240821T062745, end_date=20240821T062746
[2024-08-21T06:27:47.051+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 766 for task final_etl_processing (Bash command failed. The command returned a non-zero exit code 1.; 4556)
[2024-08-21T06:27:47.142+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-08-21T06:27:47.223+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
